# wiwiblob

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  read.rs  write.rs
node-bindings/: Cargo.toml  build-and-cp-artifact.mjs  package.json  tsconfig.json
node-bindings/native/: index.d.ts  index.js
node-bindings/src/: index.ts  lib.rs  native.ts  read.rs  wiwiblob.rs  write.rs
server/: app.vue  nuxt.config.ts  package.json
server/composables/: use_surrealdb.ts  use_wiwiblob.ts
server/layouts/: default.vue
server/pages/: index.vue  uploaded.vue
server/server/api/: index.get.ts  index.ts
server/server/api/download/: [hash].ts
server/server/api/upload/: public-file.post.ts
