# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wiwibloblib"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
blake3 = { version = "1.3.3", features = ["rayon"] }
tempfile = "3.3.0"
xz2 = { version = "0.1.7", features = ["static"] }
