# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wiwibloblib"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
blake3 = { version = "1.3.3", features = ["rayon"] }
tempfile = "3.3.0"
thiserror = "1.0.38"
xz2 = { version = "0.1.7", features = ["static"] }
