# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "node-bindings"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
neon = { version = "1.0.0-alpha.2", features = ["napi-8", "task-api"] }
wiwibloblib = { path = "../lib" }

[lib]
crate-type = ["cdylib"]
